--- a/views/users/login.jade
+++ b/views/users/login.jade
@@ -5,9 +5,9 @@ block content
         h3 Change Your Password
       form.well.form-horizontal(action='/users/login', method='post')
         .form-group
-          label.col-sm-3.control-label(for='username') username :
+          label.col-sm-3.control-label(for='login') login :
           .col-sm-7
-            input#npassword.form-control(type='text',name='username')
+            input#npassword.form-control(type='text',name='login')
 
         .form-group
           label.col-sm-3.control-label(for='password') Password :
