--- a/views/users/newPassword.jade
+++ b/views/users/newPassword.jade
@@ -1,9 +1,11 @@
+extends ../layout
 
 block content
   .container
     center
         h3 Change Your Password
-      form.well.form-horizontal(action='/newPassword', method='Post')
+      form.well.form-horizontal(action='/users/newpassword', method='Post')
+        input(type='hidden', name='email', value=email)
         .form-group
           label.col-sm-3.control-label(for='npassword') New Password :
           .col-sm-7
@@ -16,3 +18,6 @@ block content
 
         .form-group
           button.btn.btn-primary.col-sm-2(type='submit') Submit
+
+
+
