--- a/views/users/register.jade
+++ b/views/users/register.jade
@@ -1,48 +1,54 @@
-doctype html
-html
-  head
-    title Sign Up
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body    
-    center
-      h1 Sign Up
-      form(action='/users/create', method='post')
-        table
-          tr
-            td Name :
-            td
-              input(type='text', name='name', placeholder='Enter Name')
-          tr
-            td Username : 
-            td
-              input(type='text', name='username', placeholder='Select a username')
-          tr
-            td Password :
-            td
-              input(type='password', name='password', placeholder='Minimum 8 characters long')
-          tr
-            td Confirm Password :
-            td
-              input(type='password', name='cpassword', placeholder='Re-enter password')
-          tr
-            td Email ID :
-            td
-              input(type='email', name='email', placeholder='Enter Email ID')
-          tr
-            td Address :
-            td
-              input(type='text', name='address', placeholder='Enter address')
-          tr
-            td City :
-            td
-              input(type='text', name='location', placeholder='Enter city')
-          tr
-            td State :
-            td
-              input(type='text', name='state', placeholder='Enter State')
-          tr
-            td Zip Code :
-            td
-              input(type='text', name='zipCode', placeholder='Enter zipcode')
+extends ../layout
 
-        button(type='submit') Submit
+block content
+  .container
+    center
+        h3 Sign Up
+      form.well.form-horizontal(action='/users/create', method='post')
+        .form-group
+          label.col-sm-3.control-label(for='name') Name :
+          .col-sm-7
+            input#name.form-control(type='text',name='name', placeholder='Enter Name')
+
+        .form-group
+          label.col-sm-3.control-label(for='username') Username :
+          .col-sm-7
+            input#username.form-control(type='text',name='username', placeholder='Select a username')
+
+        .form-group
+          label.col-sm-3.control-label(for='password') Password :
+          .col-sm-7
+            input#password.form-control(type='password',name='password', placeholder='Minimum 8 characters long')
+
+        .form-group
+          label.col-sm-3.control-label(for='cpassword') Password :
+          .col-sm-7
+            input#cpassword.form-control(type='password',name='cpassword', placeholder='Re-enter password')
+
+        .form-group
+          label.col-sm-3.control-label(for='email') Email ID :
+          .col-sm-7
+            input#email.form-control(type='email',name='email', placeholder='Enter Email ID')
+
+        .form-group
+          label.col-sm-3.control-label(for='address') Address :
+          .col-sm-7
+            input#address.form-control(type='text',name='address', placeholder='Enter address')
+
+        .form-group
+          label.col-sm-3.control-label(for='location') City :
+          .col-sm-7
+            input#location.form-control(type='text',name='location', placeholder='Enter city')
+
+        .form-group
+          label.col-sm-3.control-label(for='state') State :
+          .col-sm-7
+            input#state.form-control(type='text',name='state', placeholder='Enter State')
+
+        .form-group
+          label.col-sm-3.control-label(for='zipCode') Zip Code :
+          .col-sm-7
+            input#zipCode.form-control(type='text',name='zipCode', placeholder='Enter zipcode')
+
+        .form-group
+          button.btn.btn-primary.col-sm-2(type='submit') Submit
