--- a/views/users/register.jade
+++ b/views/users/register.jade
@@ -21,7 +21,7 @@ block content
             input#password.form-control(type='password',name='password', placeholder='Minimum 8 characters long')
 
         .form-group
-          label.col-sm-3.control-label(for='cpassword') Password :
+          label.col-sm-3.control-label(for='cpassword') Confirm Password :
           .col-sm-7
             input#cpassword.form-control(type='password',name='cpassword', placeholder='Re-enter password')
 
