small modifications in dabbawalas.js

--- a/views/dabbawalas/addTiffinDetails.jade
+++ b/views/dabbawalas/addTiffinDetails.jade
@@ -4,7 +4,7 @@ block content
   .container
     center
         h3 Enter Additional Information of Services
-      form.well.form-horizontal(action='/dabbawalas/#{dabbawala._id}/newTiffinDetails', method='Post')
+      form.well.form-horizontal(action='/dabbawalas/#{dabbawala._id}/updateTiffinDetails', method='Post')
         .form-group
           label.col-sm-3.control-label(for='area') Area where you can provide tiffin :
           .col-sm-7
@@ -46,13 +46,13 @@ block content
           .col-sm-3
           .input-group.col-sm-3
             span.input-group-addon Rs
-            input#price_daily_nonVeg.form-control(type='text',name='price_daily_nonVeg',placeholder='Price for non-vegetarian')
+            input#price_daily_nonveg.form-control(type='text',name='price_daily_nonveg',placeholder='Price for non-vegetarian')
           .input-group.col-sm-3
             span.input-group-addon Rs
-            input#price_weekly_nonVeg.form-control(type='text',name='price_weekly_nonVeg',placeholder='Price for non-vegetarian')
+            input#price_weekly_nonveg.form-control(type='text',name='price_weekly_nonveg',placeholder='Price for non-vegetarian')
           .input-group.col-sm-3
             span.input-group-addon Rs
-            input#price_monthly_nonVeg.form-control(type='text',name='price_monthly_nonVeg',placeholder='Price for non-vegetarian')
+            input#price_monthly_nonveg.form-control(type='text',name='price_monthly_nonveg',placeholder='Price for non-vegetarian')
 
 
         .form-group
