--- a/views/dabbawalas/addTiffinDetails.jade
+++ b/views/dabbawalas/addTiffinDetails.jade
@@ -4,7 +4,7 @@ block content
   .container
     center
         h3 Enter Additional Information of Services
-      form.well.form-horizontal(action='/dabbawalas/#{dabbawala._id}/newTiffinDetails', method='Post')
+      form.well.form-horizontal(action='/dabbawalas/#{dabbawala._id}/updateTiffinDetails', method='Post')
         .form-group
           label.col-sm-3.control-label(for='area') Area where you can provide tiffin :
           .col-sm-7
