--- a/views/dabbawalas/newPassword.jade
+++ b/views/dabbawalas/newPassword.jade
@@ -17,6 +17,7 @@ block content
             input#cpassword.form-control(type='password',name='cpassword')
 
         .form-group
+          .col-sm-5
           button.btn.btn-primary.col-sm-2(type='submit') Submit
 
 
