--- a/views/dabbawalas/register.jade
+++ b/views/dabbawalas/register.jade
@@ -56,4 +56,7 @@ block content
             input#zipCode.form-control(type='text',name='zipCode', placeholder='Enter zipcode')
 
         .form-group
+          .col-sm-3
           button.btn.btn-primary.col-sm-2(type='submit') Submit
+          .col-sm-1
+          button.btn.btn-primary.col-sm-2(type='button') Cancel
