--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -9,6 +9,6 @@ block content
           
         .form-group
           .col-sm-3
-          button.btn.btn-primary.col-sm-2(type='submit') Yes
+          button.btn.btn-primary.col-sm-2(type='submit', name='submitButton', value='Yes') Yes
           .col-sm-1
-          button.btn.btn-primary.col-sm-2(type='submit') No
+          button.btn.btn-primary.col-sm-2(type='submit', name='submitButton', value='No') No
