--- a/views/dabbawalas/editDailyMenu.jade
+++ b/views/dabbawalas/editDailyMenu.jade
@@ -4,7 +4,7 @@ block content
   .container
     center
         h3 Enter Additional Information of Services
-      form.well.form-horizontal(action='/dabbawalas/#{dabbawala._id}/newDailyMenu', method='Post')
+      form.well.form-horizontal(action='/dabbawalas/#{menu._dabbawalaId}/newDailyMenu', method='Post')
         .form-group
           label.col-sm-3.control-label(for='date') Date :
           .col-sm-7
@@ -15,24 +15,24 @@ block content
           label.col-sm-3.control-label Lunch :
           label.col-sm-2.control-label Vegetarian :
           .col-sm-1
-            textarea#lunch_veg.input-xlarge(rows='3',name='lunch_veg' placeholder='Menu for Veg')
+            textarea#lunch_veg.input-xlarge(rows='3',name='lunch_veg')
           .form-group
           .col-sm-3  
           label.col-sm-2.control-label Non-Vegetarian :
           .col-sm-1
-            textarea#lunch_nonveg.input-xlarge(rows='3',name='lunch_nonveg' placeholder='Menu for Non-Veg')
+            textarea#lunch_nonveg.input-xlarge(rows='3',name='lunch_nonveg')
 
         .form-group
         .form-group
           label.col-sm-3.control-label Dinner :
           label.col-sm-2.control-label Vegetarian :
           .col-sm-1
-            textarea#dinner_veg.input-xlarge(rows='3',name='dinner_veg' placeholder='Menu for Veg')
+            textarea#dinner_veg.input-xlarge(rows='3',name='dinner_veg')
           .form-group
           .col-sm-3  
           label.col-sm-2.control-label Non-Vegetarian :
           .col-sm-1
-            textarea#dinner_nonveg.input-xlarge(rows='3',name='dinner_nonveg' placeholder='Menu for Non-Veg')
+            textarea#dinner_nonveg.input-xlarge(rows='3',name='dinner_nonveg')
 
 
         .form-group
