--- a/views/dabbawalas/newConfirm.jade
+++ b/views/dabbawalas/newConfirm.jade
@@ -11,4 +11,5 @@ block content
             input#email.form-control(type='text',name='email')
 
         .form-group
+          .col-sm-5
           button.btn.btn-primary.col-sm-2(type='submit') Resend confirmation Email
