--- a/views/dabbawalas/resetPassword.jade
+++ b/views/dabbawalas/resetPassword.jade
@@ -11,4 +11,5 @@ block content
             input#email.form-control(type='text',name='email')
 
         .form-group
+          .col-sm-5
           button.btn.btn-primary.col-sm-4(type='submit') Send me reset password instruction
