adding breakfast also

--- a/views/dabbawalas/addDailyMenu.jade
+++ b/views/dabbawalas/addDailyMenu.jade
@@ -12,6 +12,18 @@ block content
 
         .form-group
         .form-group
+          label.col-sm-3.control-label Breakfast :
+          label.col-sm-2.control-label Vegetarian :
+          .col-sm-1
+            textarea#lunch_veg.input-xlarge(rows='3',name='breakfast_veg' placeholder='Menu for Veg')
+          .form-group
+          .col-sm-3  
+          label.col-sm-2.control-label Non-Vegetarian :
+          .col-sm-1
+            textarea#lunch_nonveg.input-xlarge(rows='3',name='breakfast_nonveg' placeholder='Menu for Non-Veg')
+
+        .form-group
+        .form-group
           label.col-sm-3.control-label Lunch :
           label.col-sm-2.control-label Vegetarian :
           .col-sm-1
