--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,19 @@
+  .middle
+   {
+    /*background-color:IndianRed   ;*/
+    background-image:url('../images/food.jpg');
 
+    background-size:100% 100%;
+    height: 100%;
+    width: 100%;
+    
+    font-family:Arial;
+    line-height:32;
+    padding-top:10%;
+    padding-bottom: 10%;
+    margin-top:-2%;      
+   }
+   
    body
    {
     margin-bottom:80px;
@@ -16,3 +31,4 @@
    {
     margin-bottom: 15px;
    }
+   
