--- a/views/users/dabbawalaList.jade
+++ b/views/users/dabbawalaList.jade
@@ -1,6 +1,15 @@
 extends ../layout
 
 block content
-  .container
-    center
-        a.btn.btn-success.btn-lg(href="/users/#{records._id}/logout") Logout
+  .middle
+    .container
+      .jumbotron
+        form.well.form-horizontal(action='#', method='Post')
+          .form-group
+            label.col-sm-3.control-label(for='area') Enter Area :
+            .col-sm-7
+              input#area.form-control(type='text',name='area')
+
+          .form-group
+            .col-sm-5
+            button.btn.btn-primary.col-sm-2(type='submit') Search
