--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,16 +2,19 @@
    {
     /*background-color:IndianRed   ;*/
     background-image:url('../images/food.jpg');
-
     background-size:100% 100%;
     height: 100%;
     width: 100%;
-    
     font-family:Arial;
     line-height:32;
     padding-top:10%;
     padding-bottom: 10%;
     margin-top:-2%;      
+   }
+   .dabbawala
+   {
+    background-color:LightPink ;
+    
    }
    
    body
