--- a/views/users/enterLocation.jade
+++ b/views/users/enterLocation.jade
@@ -7,9 +7,9 @@ block content
       .jumbotron
         form.well.form-horizontal(action='/users/sendLocation', method='Get')
           .form-group
-            label.col-sm-3.control-label(for='area') Enter Area :
+            label.col-sm-3.control-label(for='location') Enter Area :
             .col-sm-7
-              input#area.form-control(type='text',name='area')
+              input#location.form-control(type='text',name='location')
 
           .form-group
             .col-sm-5
